--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
           <ul class="menu">
             <li><a href="#Home" class="home">Home</a></li>
-            <li><a href="#Sobre" class="menucinza">Sobre</a></li>
+            <li><a href= "README.md" class="menucinza">Sobre</a></li>
             <li><a href="#Treinar" class="menucinza">Treinar</a></li>
           </ul>
         </nav>
@@ -49,7 +49,7 @@
     </div>
     <footer>
       fale conosco no instagram
-      <span class="boldpreto"> <a href="https://instagram.com/treine.me"> @treine.me</a></span>
+      <a href="https://instagram.com/treine.me" class="semsublinhado"> <span class="boldpreto">@treine.me</a></span>
     </footer>
   </body>
 </html>
